Add the ability to set up SC for each service (#157)
* Add the ability to set up sc for the api container (#144)

* Add the ability to set up sc for the api container

* Add security context for init container

* Add the ability to set up sc for the api system container (#145)

* Add the ability to set up sc for the backup-background-tasks container (#146)

* Add the ability to set up sc for the backup and clear events containers (#147)

* Add the ability to set up sc for the doceditor and files services con… (#148)

* Add the ability to set up sc for the doceditor and files services containers

* Fix sc for the doceditor and files services

* Add the ability to set up sc for the files and healthchecks containers (#149)

* Add the ability to set up sc for the login and notify containers (#150)

* Add the ability to set up sc for the people server and router containers (#151)

* Add the ability to set up sc for the socket and ssoauth containers (#152)

* Add the ability to set up sc for the studio and studio notify containers (#153)

* Add the ability to set up sc for additional service containers (#154)

* Add the ability to set up sc for additional service containers

* Fix values for elasticsearch

* Add the ability to set up sc for the test container (#155)

* Add the ability to set up sc for jobs container (#156)

* Fix the repository for jobs (#158)

* Fix the repository for jobs

* Fix the repository for upgrade job

* Fix the description for test

--- a/templates/applications/healthchecks.yaml
+++ b/templates/applications/healthchecks.yaml
@@ -45,8 +45,14 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ include "docspace.serviceAccountName" . }}
-      {{- if .Values.podSecurityContext.enabled }}
-      securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
+      {{- if or .Values.podSecurityContext.enabled .Values.healthchecks.podSecurityContext.enabled }}
+      {{- $psc := dict }}
+      {{- if .Values.healthchecks.podSecurityContext.enabled }}
+      {{- $psc = .Values.healthchecks.podSecurityContext }}
+      {{- else }}
+      {{- $psc = .Values.podSecurityContext }}
+      {{- end }}
+      securityContext: {{- include "docspace.securityContext" $psc | nindent 8 }}
       {{- end }}
       affinity:
         podAntiAffinity:
@@ -91,8 +97,17 @@ spec:
       {{- end }}
       initContainers:
       - name: app-wait-storage
-        image: {{ .Values.initContainers.waitStorage.image.repository }}:{{ default .Values.images.tag .Values.initContainers.waitStorage.image.tag }}
+        image: {{ include "docspace.imageRepository" (list . .Values.initContainers.waitStorage.image.repository) }}:{{ default .Values.images.tag .Values.initContainers.waitStorage.image.tag }}
         imagePullPolicy: {{ .Values.initContainers.waitStorage.image.pullPolicy }}
+        {{- if or .Values.containerSecurityContext.enabled .Values.healthchecks.containerSecurityContext.enabled }}
+        {{- $icsc := dict }}
+        {{- if .Values.healthchecks.containerSecurityContext.enabled }}
+        {{- $icsc = .Values.healthchecks.containerSecurityContext }}
+        {{- else }}
+        {{- $icsc = .Values.containerSecurityContext }}
+        {{- end }}
+        securityContext: {{- include "docspace.securityContext" $icsc | nindent 10 }}
+        {{- end }}
         resources: {{- toYaml .Values.initContainers.waitStorage.resources | nindent 10 }}
         volumeMounts:
         - name: files-data
@@ -102,10 +117,16 @@ spec:
       {{- end }}
       containers:
       - name: healthchecks
-        image: {{ .Values.healthchecks.image.repository }}:{{ default .Values.images.tag .Values.healthchecks.image.tag }}
+        image: {{ include "docspace.imageRepository" (list . .Values.healthchecks.image.repository) }}:{{ default .Values.images.tag .Values.healthchecks.image.tag }}
         imagePullPolicy: {{ .Values.healthchecks.image.pullPolicy }}
-        {{- if .Values.containerSecurityContext.enabled }}
-        securityContext: {{- omit .Values.containerSecurityContext "enabled" | toYaml | nindent 10 }}
+        {{- if or .Values.containerSecurityContext.enabled .Values.healthchecks.containerSecurityContext.enabled }}
+        {{- $csc := dict }}
+        {{- if .Values.healthchecks.containerSecurityContext.enabled }}
+        {{- $csc = .Values.healthchecks.containerSecurityContext }}
+        {{- else }}
+        {{- $csc = .Values.containerSecurityContext }}
+        {{- end }}
+        securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
         ports:
         - containerPort: {{ .Values.healthchecks.containerPorts.healthcheck }}
