--- a/templates/applications/clear-events.yaml
+++ b/templates/applications/clear-events.yaml
@@ -77,6 +77,9 @@ spec:
                 - clear-events
             topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
           {{- end }}
+          {{- with .Values.clearEvents.customPodAntiAffinity }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
         {{- with .Values.clearEvents.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
@@ -85,11 +88,11 @@ spec:
         nodeAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-      {{- if .Values.nodeSelector }}
-      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- if or .Values.nodeSelector .Values.clearEvents.nodeSelector }}
+      nodeSelector: {{ toYaml (default .Values.nodeSelector .Values.clearEvents.nodeSelector) | nindent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- if or .Values.tolerations .Values.clearEvents.tolerations }}
+      tolerations: {{ toYaml (default .Values.tolerations .Values.clearEvents.tolerations) | nindent 8 }}
       {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
