--- a/templates/applications/files-services.yaml
+++ b/templates/applications/files-services.yaml
@@ -77,6 +77,9 @@ spec:
                 - files-services
             topologyKey: {{ .Values.podAntiAffinity.topologyKey }}
           {{- end }}
+          {{- with .Values.filesServices.customPodAntiAffinity }}
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
         {{- with .Values.filesServices.podAffinity }}
         podAffinity:
           {{- toYaml . | nindent 10 }}
@@ -85,11 +88,11 @@ spec:
         nodeAffinity:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-      {{- if .Values.nodeSelector }}
-      nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
+      {{- if or .Values.nodeSelector .Values.filesServices.nodeSelector }}
+      nodeSelector: {{ toYaml (default .Values.nodeSelector .Values.filesServices.nodeSelector) | nindent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
-      tolerations: {{ toYaml .Values.tolerations | nindent 8 }}
+      {{- if or .Values.tolerations .Values.filesServices.tolerations }}
+      tolerations: {{ toYaml (default .Values.tolerations .Values.filesServices.tolerations) | nindent 8 }}
       {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
