--- a/templates/services/api-system.yaml
+++ b/templates/services/api-system.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.apiSystem.enabled (eq .Values.connections.apiSystemHost "api-system") }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,3 +20,4 @@ spec:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
   type: ClusterIP
+{{- end }}
