--- a/templates/services/files.yaml
+++ b/templates/services/files.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.files.enabled (eq .Values.connections.filesHost "files" ) }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -19,3 +20,4 @@ spec:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
   type: ClusterIP
+{{- end }}
