--- a/templates/services/ssoauth.yaml
+++ b/templates/services/ssoauth.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.ssoauth.enabled (eq .Values.connections.ssoauthHost "ssoauth") }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -22,3 +23,4 @@ spec:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
   type: ClusterIP
+{{- end }}
