--- a/templates/configmaps/elasticsearch-clear-indexes.yaml
+++ b/templates/configmaps/elasticsearch-clear-indexes.yaml
@@ -11,8 +11,11 @@ data:
     #!/bin/bash
 
     apt update && apt-get install -y curl jq
-    response=$(curl -s http://$ELK_HOST:$ELK_PORT)
-
+    if [[ "$ELK_SHEME" == "https" ]]; then
+      response=$(curl -s $ELK_SHEME://$ELK_HOST)
+    else
+      response=$(curl -s $ELK_SHEME://$ELK_HOST:$ELK_PORT)
+    fi
     name=$(echo $response | jq -r ".name")
     if [[ "$name" = "elasticsearch-0" ]] && [[ "$ELK_HOST" = "elasticsearch" ]]; then
       mysql \
